Added trackperformance screens

--- a/app/modules/common/views/widgets.html
+++ b/app/modules/common/views/widgets.html
@@ -1,3 +1,281 @@
+<div class="panel-group customPanel" id="accordion" role="tablist" aria-multiselectable="true">
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+    	<div class="panel-title">
+    		<p>Equity Schemes <span class="pull-right"><a role="button" data-toggle="collapse" data-parent="#accordion" href="javascript:void(0)" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          EXPAND
+        </a></span></p>
+    	</div>
+    	<div class="panel-description">
+    		<div class="table-outer-cover panel-table">
+				<div class="thead">
+					<div class="tr">
+						<div class="th">
+							<p>% Holding</p>
+						</div>
+						<div class="th">
+							<p>Invested Value</p>
+						</div>
+						<div class="th">
+							<p>Current Value</p>
+						</div>
+						<div class="th">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+								<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="tbody">
+					<div class="tr">
+						<div class="td">
+							<p>25%</p>
+						</div>
+						<div class="td">
+							<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+								<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+							</div>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="percentage">10%</span></p>
+								<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+    	</div>
+    </div>
+    <div id="collapseOne" accordian class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+        <div class="table-outer-cover panel-table">
+				<p class="schemes">DSP Black Rock Micro Cap Fund<span class="money-value">
+					<span class="gain types">
+					<span class="currency">&#8377;</span><span class="percentage">10,200</span></span>
+				</span></p>
+				<div class="tbody">
+					<div class="tr">
+						<div class="td">
+							<p><span class="pie-circle" ng-style="{'background-color':'#047ac1'}"></span><span class="content">25%</span></p>
+						</div>
+						<div class="td">
+							<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+								<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+							</div>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="percentage">10%</span></p>
+								<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+    	<div class="panel-title">
+    		<p>Equity Schemes <span class="pull-right"><a role="button" data-toggle="collapse" data-parent="#accordion" href="javascript:void(0)" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+          EXPAND
+        </a></span></p>
+    	</div>
+    	<div class="panel-description">
+    		<div class="table-outer-cover panel-table">
+				<div class="thead">
+					<div class="tr">
+						<div class="th">
+							<p>% Holding</p>
+						</div>
+						<div class="th">
+							<p>Invested Value</p>
+						</div>
+						<div class="th">
+							<p>Current Value</p>
+						</div>
+						<div class="th">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+								<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="tbody">
+					<div class="tr">
+						<div class="td">
+							<p>25%</p>
+						</div>
+						<div class="td">
+							<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+								<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+							</div>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="percentage">10%</span></p>
+								<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+    	</div>
+    </div>
+    <div id="collapseTwo" accordian class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+        <div class="table-outer-cover panel-table">
+				<p class="schemes">DSP Black Rock Micro Cap Fund<span class="money-value">
+					<span class="gain types">
+					<span class="currency">&#8377;</span><span class="percentage">10,200</span></span>
+				</span></p>
+				<div class="tbody">
+					<div class="tr">
+						<div class="td">
+							<p><span class="pie-circle" ng-style="{'background-color':'#047ac1'}"></span><span class="content">25%</span></p>
+						</div>
+						<div class="td">
+							<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+								<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+							</div>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="percentage">10%</span></p>
+								<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+      </div>
+    </div>
+  </div>
+  <div class="panel panel-default">
+    <div class="panel-heading" role="tab" id="headingOne">
+    	<div class="panel-title">
+    		<p>Equity Schemes <span class="pull-right"><a role="button" data-toggle="collapse" data-parent="#accordion" href="javascript:void(0)" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+          EXPAND
+        </a></span></p>
+    	</div>
+    	<div class="panel-description">
+    		<div class="table-outer-cover panel-table">
+				<div class="thead">
+					<div class="tr">
+						<div class="th">
+							<p>% Holding</p>
+						</div>
+						<div class="th">
+							<p>Invested Value</p>
+						</div>
+						<div class="th">
+							<p>Current Value</p>
+						</div>
+						<div class="th">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+								<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="tbody">
+					<div class="tr">
+						<div class="td">
+							<p>25%</p>
+						</div>
+						<div class="td">
+							<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+								<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+							</div>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="percentage">10%</span></p>
+								<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+    	</div>
+    </div>
+    <div id="collapseThree" accordian class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+      <div class="panel-body">
+        <div class="table-outer-cover panel-table">
+				<p class="schemes">DSP Black Rock Micro Cap Fund<span class="money-value">
+					<span class="gain types">
+					<span class="currency">&#8377;</span><span class="percentage">10,200</span></span>
+				</span></p>
+				<div class="tbody">
+					<div class="tr">
+						<div class="td">
+							<p><span class="pie-circle" ng-style="{'background-color':'#047ac1'}"></span><span class="content">25%</span></p>
+						</div>
+						<div class="td">
+							<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+								<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+							</div>
+						</div>
+						<div class="td">
+							<div class="money-value">
+								<p class="gain types">
+								<span class="percentage">10%</span></p>
+								<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
 <div class="table-outer-cover schemeTable">
 	<div class="thead">
 		<div class="tr">
