--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -50,7 +50,7 @@
  -->			<h4 class="text-center">You havent started building<span class="nextline">your smart profile yet</span></h4>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover">
+				<div class="goals-cover" click-redirect="/trackPerformanceStart">
 					<div class="image-div">
 						<img src="assets/images/dashboardImage4.png">
 					</div>
