--- a/app/modules/investwithdraw/views/investWidrawStart.html
+++ b/app/modules/investwithdraw/views/investWidrawStart.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class="col-xs-12 bottom-desc">
 		<div class="fin-btn-group addMargin text-left">
-            <button click-redirect="/quickInvestStart" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
+            <button click-redirect="/planInvest" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
         </div>
 	</div>
 </section>
