--- a/app/modules/investwithdraw/views/withdrawStart.html
+++ b/app/modules/investwithdraw/views/withdrawStart.html
@@ -208,13 +208,10 @@
 	<div class="modal-dialog" role="document">
 	    <div class="modal-content">
 		    <div class="fadeIn modal-wrapper">
-		    	<h4>My following schemes have a Future SIP:</h4>
+		    	<h4>The following schemes have a Future SIP:</h4>
 		    	<div class="table-outer-cover withdrawModalTable" custom-scroll-bar>
 					<div class="thead">
 						<div class="tr">
-							<div class="th">
-								<p>Goal</p>
-							</div>
 							<div class="th">
 								<p>Expected Corpus</p>
 							</div>
@@ -233,83 +230,68 @@
 						<div class="tbody">
 							<div class="tr">
 								<div class="td">
-									<p>PRO1</p>
+									<p class="schemes">Kotal select Focus Growth</p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>1,00,03,138</span></p>
-								</div>
-								<div class="td">
-									<p>7</p>
+									<p>Large Cap</p>
 								</div>
 								<div class="td">
 									<p>Rs.<span>83,200</span></p>
 								</div>
 								<div class="td">
+									<p>-</p>
 								</div>
 							</div>
 							<div class="tr">
 								<div class="td">
-									<p>INV1*</p>
+									<p class="schemes">Kotal select Focus Growth</p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>9,08,810</span></p>
+									<p>Large Cap</p>
 								</div>
 								<div class="td">
-									<p>5*</p>
+									<p>Rs.<span>83,200</span></p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>10,000</span></p>
-								</div>
-								<div class="td">
-									<p>Rs.<span>94,000</span></p>
+									<p>-</p>
 								</div>
 							</div>
 							<div class="tr">
 								<div class="td">
-									<p>INV1*</p>
+									<p class="schemes">Kotal select Focus Growth</p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>9,08,810</span></p>
+									<p>Large Cap</p>
 								</div>
 								<div class="td">
-									<p>5*</p>
+									<p>Rs.<span>83,200</span></p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>10,000</span></p>
-								</div>
-								<div class="td">
-									<p>Rs.<span>94,000</span></p>
+									<p>-</p>
 								</div>
 							</div>
 							<div class="tr">
 								<div class="td">
-									<p>INV1*</p>
+									<p class="schemes">Kotal select Focus Growth</p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>9,08,810</span></p>
+									<p>Large Cap</p>
 								</div>
 								<div class="td">
-									<p>5*</p>
+									<p>Rs.<span>83,200</span></p>
 								</div>
 								<div class="td">
-									<p>Rs.<span>10,000</span></p>
-								</div>
-								<div class="td">
-									<p>Rs.<span>94,000</span></p>
+									<p>-</p>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="tfooter">
-						<div class="total">
-							<p>Total</p>
-						</div>
-						<div class="sipTotal">
-							<p>Rs.<span>93,200</span></p>
-						</div>
-						<div class="lumpSumTotal">
-							<p>Rs.<span>94,000</span></p>
-						</div>
+				</div>
+				<div class="tfooter">
+					<p>Would you like to cancel this?</p>
+					<div class="fin-btn-group">
+						<button class="fin-app-btn fin-orange">NO</button>
+						<button class="fin-app-btn fin-orange">YES</button>
 					</div>
 				</div>
 		    </div>
