--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -77,8 +77,8 @@
 	<div class="col-xs-12 bottom-desc">
 		<p class="text-center">I am done planning my investments.</p>
 		<div class="fin-btn-group">
-			<button class="fin-app-btn fin-orange">INVEST NOW</button>
+			<button class="fin-app-btn fin-orange" click-redirect="/investStep1">INVEST NOW</button>
 		</div>
-		<h4 class="text-center pull-left full-width">VIEW PASS GOALS</h4>
+		<h4 class="text-center pull-left full-width">VIEW PAST GOALS</h4>
 	</div>
 </section>
