--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -94,7 +94,7 @@
 	<div class="col-xs-12 bottom-desc">
 		<p class="text-left">I am done setting my goals.</p>
 		<div class="fin-btn-group addMargin text-left">
-            <button click-redirect="/quickInvestStart" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
+            <button click-redirect="/planInvest" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
             <button click-redirect="/dashboard" class="fin-app-btn fin-orange">CONTINUE TO FUND SELECTION</button>
         </div>
 	</div>
