--- a/app/modules/investwithdraw/views/investStep1.html
+++ b/app/modules/investwithdraw/views/investStep1.html
@@ -2,11 +2,23 @@
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-4 pie-cover">
-				<p><span class="placeholder">Your asset allocation for the year</span></p>
-				<invest-pie-chart items="resultPercentage" title="pieTitle"></invest-pie-chart>.
+				<p><span class="placeholder pie-header">Your asset allocation for the year</span></p>
+				<invest-pie-chart items="resultPercentage" title="pieTitle"></invest-pie-chart>
+				<div class="pie-chart-legend">
+					<div class="label-cover">
+						<p ng-repeat="legend in legends"><span class="content" ng-bind="legend.name"></span><span class="legend-cover">
+							<span class="legend-main" ng-style="{'background-color':legend.color,'width':legend.value+'%'}">
+								<span class="right"></span>
+								<span class="left" ng-style="{'border-left':legend.borderColor}"></span>
+								<span class="value" ng-bind="legend.value+' %'"></span>
+							</span>
+						</span><span class="value-cover"><span>Rs.</span><span class="value" ng-bind="legend.price | currency:''"></span></span></p>
+					</div>
+				</div>
+				<span class="placeholder bottom">*investment amounts are rounded off to the nearest hundred</span>
 			</div>
 			<div class="col-xs-8">
-				<p><span class="placeholder">Your goal summary</span></p>
+				<p><span class="placeholder pie-header">Your goal summary</span></p>
 				<div class="table-outer-cover investNowTable">
 					<div class="thead">
 						<div class="tr">
