--- a/less/modal.less
+++ b/less/modal.less
@@ -60,17 +60,31 @@
 		width:50%;
 		.modal-content{
 			width:100%;
+			h4{
+				.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+	            .PIXEL2EM(20);
+			}
 		}
 		.modal-wrapper{
 			padding:2% 5% 6% 5%;
 			.withdrawModalTable{
 				width:100%;
-				height:200px;
+				height:220px;
+				padding-bottom:5%;
+				padding-left:0px;
 				box-shadow:none;
+				background:none;
+				.mCustomScrollBox{
+					max-height:none!important;
+				}
+				.mCSB_2_container_wrapper{
+					margin-bottom:0px;
+				}
 				.seperate-cover{
-					width:100%;
+					width:96%;
 				}
 				.thead{
+					width:96%;
 					.th{
 						&:nth-child(1){
 							width:40%;
@@ -87,6 +101,45 @@
 						&:nth-child(4){
 							width:20%;
 							float:left;
+						}
+					}
+				}
+				.tbody{
+					.td{
+						&:nth-child(1){
+							width:40%;
+							float:left;
+						}
+						&:nth-child(2){
+							width:20%;
+							float:left;
+						}
+						&:nth-child(3){
+							width:20%;
+							float:left;
+						}
+						&:nth-child(4){
+							width:20%;
+							float:left;
+						}
+					}
+				}
+			}
+			.tfooter{
+				p{
+					float:left;
+					.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+	            	.PIXEL2EM(30);
+				}
+				.fin-btn-group{
+					width:50%;
+					float:right;
+					.fin-app-btn{
+						width:36%;
+						float:right;
+						&:first-child{
+							margin-left: 10px;
+							margin-right: 20px;
 						}
 					}
 				}
