--- a/less/smartpolio.less
+++ b/less/smartpolio.less
@@ -353,3 +353,50 @@ section{
 	  width:85px;
 	}
 }
+
+.chart-cover{
+	background-image: -moz-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+  	background-image: -webkit-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
+  	box-shadow: 1px 5.33px 11px -4px rgb( 4, 123, 193 );
+  	height:400px;
+  	border-radius:25px;
+  	padding:4% 3%;
+  	.chart-tabs{
+  		list-style-type:none;
+  		li{
+  			display:inline-block;
+  			margin-left:10%;
+  			a{
+  				.GLOBAL_FONT_STYLE('Roboto-Bold',#f16828,normal);
+				.PIXEL2EM(18);
+  				text-decoration:none;
+  				opacity:0.5;
+  			}
+  			&.active{
+  				a{
+  					position:relative;
+  					opacity:1;
+  					&:after{
+  						left: 0;
+					    content: '';
+					    position: absolute;
+					    width: 0;
+					    height: 0;
+					    border-left: 5px solid transparent;
+					    border-right: 5px solid transparent;
+					    border-top: 8px solid #f26529;
+					    right: 0;
+					    margin-right: auto;
+					    margin-left: auto;
+					    top: 20px;
+  					}
+  				}
+  			}
+  		}
+  	}
+  	.chart-main-header{
+  		.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+		.PIXEL2EM(18);
+		padding-left: 22px;
+  	}
+}
