--- a/less/table.less
+++ b/less/table.less
@@ -20,6 +20,9 @@
 				float:left;
 				p{
 					margin-bottom:0px;
+					&.no-text{
+						opacity:0;
+					}
 				}
 			}
 		}
@@ -558,6 +561,60 @@
 				.td{
 					width:33%;
 				}
+			}
+		}
+	}
+}
+
+.money-value{
+	h4{
+		.GLOBAL_FONT_STYLE('Roboto-Regular',@black,normal);
+		.PIXEL2EM(16);	
+		opacity: 0.7;
+	}
+	p{
+		.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+		.PIXEL2EM(24);
+	}
+	.types{
+		.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+		.PIXEL2EM(24);
+		&.gain{
+			color:#80c342!important;
+			position: relative;
+			padding-left: 16px;
+			line-height: 14px;
+			margin-bottom: 0px;
+			&:after{
+				content:'';
+				position: absolute;
+				left:0px;
+				bottom: 0px;
+				width: 0;
+				height: 0;
+				border-left: 5px solid transparent;
+				border-right: 5px solid transparent;
+				border-bottom: 6px solid #80c342!important;
+
+			}
+		}
+		&.loss{
+			color:#f26529!important;
+			position: relative;
+			padding-left: 16px;
+			line-height: 14px;
+			margin-bottom: 0px;
+			&:after{
+				content:'';
+				position: absolute;
+				left:0px;
+				bottom: 0px;
+				width: 0;
+				height: 0;
+				border-left: 5px solid transparent;
+				border-right: 5px solid transparent;
+				border-top: 6px solid #f26529!important;
+
 			}
 		}
 	}
