--- a/less/widgets.less
+++ b/less/widgets.less
@@ -432,3 +432,132 @@ input{
 		}
 	}	
 }
+.customPanel{
+	&.panel-group{
+		width:100%;
+		float:left;
+		.panel{
+			+ .panel{
+				margin-top:3px;
+			}
+		}
+	}
+	.panel{
+		width:100%;
+		float:left;
+		border:none;
+	}
+	.panel-heading{
+		width:100%;
+		float:left;
+		padding:28px 28px;
+		background-color:#e6eef4;
+		border:none;
+		border-top-left-radius:25px;
+		border-top-right-radius:25px;
+		.panel-title{
+			p{
+				.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
+				.PIXEL2EM(18);
+				a{
+					position:relative;
+					.GLOBAL_FONT_STYLE('Roboto-Regular',@marinerapprox,normal);
+					.PIXEL2EM(14);
+					text-decoration:none;
+					&:after{
+						display:inline-block;
+						content:url('../images/accordian-dropdown.png');
+						position: absolute;
+						width: 10px;
+						height: 10px;
+						top: -18px;
+						right: 0;
+						transition:all 0.2s ease;
+    					transform-origin: bottom;
+					}
+					&.rotate{
+						&:after{
+							transform:rotate(180deg);
+						}
+					}
+				}
+			}
+		}
+	}
+	.panel-collapse{
+		background-color:#f0f4f7;
+		width:100%;
+		float:left;
+		border:none;
+		margin-top: 1px;
+		.panel-body{
+			border:none!important;
+			padding:28px 28px;
+			.pie-circle{
+				position:absolute;
+				display:inline-block;
+				width:20px;
+				height:20px;
+				border-radius:50%;
+				+ .content{
+					margin-left:25px;
+				}
+			}
+			.schemes{
+				color:@lochmaraapprox;
+				cursor:pointer;
+				.PIXEL2EM(18);
+				span{
+					&.money-value{
+						display:inline-block;
+						float:right;
+						.types{
+							&:after{
+								display:none;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+	.panel-description{
+		width:100%;
+		float:left;
+	}
+	.panel-table{
+		background:none;
+		box-shadow:none;
+		padding:0px;
+		width:100%;
+		.thead{
+			padding-bottom:3px;
+			.tr{
+				.th{
+					width:25%;
+					&:nth-child(4){
+						text-align:center;
+						.money-value{
+							float:right;
+						}
+					}
+				}
+			}
+		}
+		.tbody{
+			.tr{
+				padding-top:0px;
+				padding-bottom:0px;
+				.td{
+					width:25%;
+					&:nth-child(4){
+						text-align:center;
+						.money-value{
+							float:right;
+						}
+					}
+				}
+			}
+		}
+	}	
+}
