--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -131,16 +131,297 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-				<ul class="chart-main-tabs" ng-init="setChartValue = 'FINANCE'">
+				<ul class="chart-main-tabs" ng-init="setChartValue = 'SCHEME'">
 					<li ng-click="setChartValue = 'FINANCE'" ng-class="{'activeli':setChartValue == 'FINANCE'}"><a href="javascript:void(0)">Financial Goal Status</a></li>
 					<li ng-click="setChartValue = 'SCHEME'" ng-class="{'activeli':setChartValue == 'SCHEME'}"><a href="javascript:void(0)">Scheme Details</a></li>
 					<li ng-click="setChartValue = 'TRANSACTION'" ng-class="{'activeli':setChartValue == 'TRANSACTION'}"><a href="javascript:void(0)">Transaction History</a></li>
 					<li ng-click="setChartValue = 'PORFOLIO_TRACKER'" ng-class="{'activeli':setChartValue == 'PORFOLIO_TRACKER'}"><a href="javascript:void(0)">Portfolio Tracker</a></li>
 				</ul>
-				<div class="chart-cover" ng-show="setChartValue == 'PORFOLIO_TRACKER'" >
-					<h3 class="chart-main-header">Portfolio Performance Since Inception</h3>
-					<hc-chart ng-if="resultSet" items="resultSet"></hc-chart>
-					<p class="text-right"><span class="addOnlyBold highlight">Rs 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav">Rs.<span class="addOnlyBold highlight">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
+				<div class="chart-cover scheme-pie" ng-show="setChartValue == 'SCHEME'" custom-scroll-bar>
+					<div class="col-xs-12">
+						<div class="col-xs-6 scheme-chart">
+							<div class="row">
+								<scheme-chart title="pieTitle" items="resultPercentage" colors="colors"></scheme-chart>
+							</div>
+						</div>
+						<div class="col-xs-6">
+						</div>
+						<div class="panel-group customPanel" id="accordion" role="tablist" aria-multiselectable="true">
+						  <div class="panel panel-default">
+						    <div class="panel-heading" role="tab" id="headingOne">
+						    	<div class="panel-title">
+						    		<p>Equity Schemes <span class="pull-right"><a role="button" data-toggle="collapse" data-parent="#accordion" href="javascript:void(0)" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+						          EXPAND
+						        </a></span></p>
+						    	</div>
+						    	<div class="panel-description">
+						    		<div class="table-outer-cover panel-table">
+										<div class="thead">
+											<div class="tr">
+												<div class="th">
+													<p>% Holding</p>
+												</div>
+												<div class="th">
+													<p>Invested Value</p>
+												</div>
+												<div class="th">
+													<p>Current Value</p>
+												</div>
+												<div class="th">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="tbody">
+											<div class="tr">
+												<div class="td">
+													<p>25%</p>
+												</div>
+												<div class="td">
+													<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+													</div>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="percentage">10%</span></p>
+														<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+						    	</div>
+						    </div>
+						    <div id="collapseOne" accordian class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+						      <div class="panel-body">
+						        <div class="table-outer-cover panel-table">
+										<p class="schemes">DSP Black Rock Micro Cap Fund<span class="money-value">
+											<span class="gain types">
+											<span class="currency">&#8377;</span><span class="percentage">10,200</span></span>
+										</span></p>
+										<div class="tbody">
+											<div class="tr">
+												<div class="td">
+													<p><span class="pie-circle" ng-style="{'background-color':'#047ac1'}"></span><span class="content">25%</span></p>
+												</div>
+												<div class="td">
+													<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+													</div>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="percentage">10%</span></p>
+														<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel panel-default">
+						    <div class="panel-heading" role="tab" id="headingOne">
+						    	<div class="panel-title">
+						    		<p>Equity Schemes <span class="pull-right"><a role="button" data-toggle="collapse" data-parent="#accordion" href="javascript:void(0)" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+						          EXPAND
+						        </a></span></p>
+						    	</div>
+						    	<div class="panel-description">
+						    		<div class="table-outer-cover panel-table">
+										<div class="thead">
+											<div class="tr">
+												<div class="th">
+													<p>% Holding</p>
+												</div>
+												<div class="th">
+													<p>Invested Value</p>
+												</div>
+												<div class="th">
+													<p>Current Value</p>
+												</div>
+												<div class="th">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="tbody">
+											<div class="tr">
+												<div class="td">
+													<p>25%</p>
+												</div>
+												<div class="td">
+													<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+													</div>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="percentage">10%</span></p>
+														<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+						    	</div>
+						    </div>
+						    <div id="collapseTwo" accordian class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+						      <div class="panel-body">
+						        <div class="table-outer-cover panel-table">
+										<p class="schemes">DSP Black Rock Micro Cap Fund<span class="money-value">
+											<span class="gain types">
+											<span class="currency">&#8377;</span><span class="percentage">10,200</span></span>
+										</span></p>
+										<div class="tbody">
+											<div class="tr">
+												<div class="td">
+													<p><span class="pie-circle" ng-style="{'background-color':'#047ac1'}"></span><span class="content">25%</span></p>
+												</div>
+												<div class="td">
+													<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+													</div>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="percentage">10%</span></p>
+														<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+						      </div>
+						    </div>
+						  </div>
+						  <div class="panel panel-default">
+						    <div class="panel-heading" role="tab" id="headingOne">
+						    	<div class="panel-title">
+						    		<p>Equity Schemes <span class="pull-right"><a role="button" data-toggle="collapse" data-parent="#accordion" href="javascript:void(0)" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+						          EXPAND
+						        </a></span></p>
+						    	</div>
+						    	<div class="panel-description">
+						    		<div class="table-outer-cover panel-table">
+										<div class="thead">
+											<div class="tr">
+												<div class="th">
+													<p>% Holding</p>
+												</div>
+												<div class="th">
+													<p>Invested Value</p>
+												</div>
+												<div class="th">
+													<p>Current Value</p>
+												</div>
+												<div class="th">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="tbody">
+											<div class="tr">
+												<div class="td">
+													<p>25%</p>
+												</div>
+												<div class="td">
+													<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+													</div>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="percentage">10%</span></p>
+														<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+						    	</div>
+						    </div>
+						    <div id="collapseThree" accordian class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+						      <div class="panel-body">
+						        <div class="table-outer-cover panel-table">
+										<p class="schemes">DSP Black Rock Micro Cap Fund<span class="money-value">
+											<span class="gain types">
+											<span class="currency">&#8377;</span><span class="percentage">10,200</span></span>
+										</span></p>
+										<div class="tbody">
+											<div class="tr">
+												<div class="td">
+													<p><span class="pie-circle" ng-style="{'background-color':'#047ac1'}"></span><span class="content">25%</span></p>
+												</div>
+												<div class="td">
+													<p><span class="currency">&#8377;</span><span class="amount">10,03,138</span></p>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
+														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
+													</div>
+												</div>
+												<div class="td">
+													<div class="money-value">
+														<p class="gain types">
+														<span class="percentage">10%</span></p>
+														<p ng-if="false" class="loss types">( <span class="percentage">10%</span> )</p>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+						      </div>
+						    </div>
+						  </div>
+						</div>
+					</div>						
 				</div>	
 				<div class="chart-cover finance-cover" ng-show="setChartValue == 'FINANCE'" custom-scroll-bar>
 					<div class="col-xs-12">
@@ -215,6 +496,11 @@
 						 </div>
 					</div>							
 				</div>	
+				<div class="chart-cover" ng-show="setChartValue == 'PORFOLIO_TRACKER'" >
+					<h3 class="chart-main-header">Portfolio Performance Since Inception</h3>
+					<hc-chart ng-if="resultSet" items="resultSet"></hc-chart>
+					<p class="text-right"><span class="addOnlyBold highlight">Rs 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav">Rs.<span class="addOnlyBold highlight">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
+				</div>
 			</div>
 		</div>
 	</div>
