--- a/less/widgets.less
+++ b/less/widgets.less
@@ -437,6 +437,7 @@ input{
 		width:100%;
 		float:left;
 		.panel{
+			background: transparent;
 			+ .panel{
 				margin-top:3px;
 			}
@@ -459,21 +460,26 @@ input{
 			p{
 				.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
 				.PIXEL2EM(18);
+				margin-right:0px;
 				a{
 					position:relative;
 					.GLOBAL_FONT_STYLE('Roboto-Regular',@marinerapprox,normal);
-					.PIXEL2EM(14);
+					font-size:12px!important;
 					text-decoration:none;
 					&:after{
+						content:'';
 						display:inline-block;
-						content:url('../images/accordian-dropdown.png');
+						background-image:url('../images/accordian-dropdown.png');
+						background-size:100%;
+						background-repeat:no-repeat;
+						background-position:center;
 						position: absolute;
 						width: 10px;
 						height: 10px;
-						top: -18px;
+						top: -10px;
 						right: 0;
 						transition:all 0.2s ease;
-    					transform-origin: bottom;
+    					transform-origin: center;
 					}
 					&.rotate{
 						&:after{
