--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -601,7 +601,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="guage clearfix" one-time-equity="20" calculate-guage="80">
+                                <div class="guage clearfix" one-time-equity="80" calculate-guage="50">
                                     <h4 class="text">Recommended</h4>
                                     <div class="orbit">
                                         <div class="indicator"></div>
@@ -672,13 +672,13 @@
         <div class="swiper-slide">
             <form name="retirementForm1" novalidate>
                 <div class="swiper-content content-1">
-                      <p class="question">My goal name is <span class="swiper-input global-input"><input type="text" name="year" required ng-model="modelVal.A1"></span></p>
+                      <p class="question">My goal name is <span class="swiper-input global-input"><input type="text"  required ng-model="modelVal.A1"></span></p>
                       <span class="placeholder">Use minimum 20 characters,alphabets and/or numbers</span>
                 </div>
             </form>
         </div>
         <div class="swiper-slide" data-key="retirement:0">
-            <form name="quickInvestForm2" novalidate>
+            <form name="retirementForm2" novalidate>
                 <div class="swiper-content">
                     <h1 class="topHeader">I would like to plan my retirement at the following age</h1>
                     <span class="placeholder">Click to edit</span>
@@ -687,14 +687,14 @@
                             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                                 <div class="row">
                                     <h3 class="calendarHeader">Current Age</h3>
-                                    <fin-calendar-form ng-model="equity" format-symbol="none" type="#f0f4f7" font-color="#047bc1" min="0" max="100"></fin-calendar-form>
+                                    <fin-calendar-form ng-model="modelVal.A2" format-symbol="none" type="#f0f4f7" font-color="#047bc1" min="0" max="100"></fin-calendar-form>
                                 </div>
                             </div>
                             <div class="col-xs-4 calendar-divider"><span></span></div>
                             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
                                 <div class="row">
                                     <h3 class="calendarHeader">Retirement Age</h3>
-                                    <fin-calendar-form ng-init="equity2 = 60" ng-model="equity2" format-symbol="none" type="#fde8de" font-color="#f26529" min="0" max="100"></fin-calendar-form>
+                                    <fin-calendar-form ng-init="modelVal.A3 = 60" ng-model="modelVal.A3" format-symbol="none" type="#fde8de" font-color="#f26529" min="0" max="100"></fin-calendar-form>
                                 </div>
                             </div>
                         </div>
@@ -702,44 +702,36 @@
                 </div>
             </form>
         </div>
-        <div class="swiper-slide" data-key="calculate:year:{{equity}}">
-            <form name="quickInvestForm3" novalidate>
+        <div class="swiper-slide" ng-if="$root.selectedCriteria == 'op1'" data-key="calculate:year:{{equity}}">
+            <form name="retirementForm3" novalidate>
+                <div class="swiper-content retirement-amount">
+                      <h1 class="topHeader">My target savings on retirement in <span class="calculatedAge" ng-bind="retirement.calculateYear"></span></h1>
+                      <p class="question width-auto"><span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" type="text" ng-model="modelVal.A4" required></span><span class="or">OR</span><button class="fin-app-btn fin-btn-white" ng-click="reloadRoute('op2')">PLEASE HELP ME ESTIMATE</button></p>
+                </div>
+            </form>
+        </div>
+        <div class="swiper-slide" ng-if="$root.selectedCriteria == 'op1'">
+            <form name="retirementForm4" novalidate>
                 <div class="swiper-content">
-                      <h1 class="topHeader">My target savings on retirement in <span class="calculatedAge">2041</span></h1>
-                      <p class="question width-auto"><span class="swiper-input"><input type="text" name="year" required ng-model="modelVal.A1"></span><span class="or">OR</span><button class="fin-app-btn fin-btn-white">PLEASE HELP ME ESTIMATE</button></p>
+                      <h1 class="topHeader">To have savings amount of <span class="highlight"><span class="currency">&#8377</span><span class="content" ng-bind="modelVal.A4 | amountSeffix"></span></span> by <span class="highlight"><span class="calculatedAge" ng-bind="retirement.calculateYear"></span></span>,<span class="nextline">I am willing to set aside</span></h1>
+                      <p class="question width-auto"><span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" ng-model="modelVal.A5" type="text" ame="year" required></span> per month</p>
+                      <p class="question">Recommended investment anmount <span class="highlight"><span class="currency">&#8377</span>3.0 Cr</span></span> per month</p>
                 </div>
             </form>
         </div>
-        <div class="swiper-slide">
-            <form name="quickInvestForm3" novalidate>
-                <div class="swiper-content">
-                      <h1 class="topHeader">To have savings amount of <span class="highlight"><span class="currency">&#8377</span>3.0 Cr</span> by <span class="highlight"><span class="calculatedAge">2014</span></span>,<span class="nextline">I am willing to set aside</span></h1>
-                      <p class="question width-auto"><span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" ng-model="modelVal.A3" ng-init="modelVal.A3 = 0" ng-keyup="showMessage2 = true" type="text" ame="year" required></span> per month</p>
-                </div>
-            </form>
-        </div>
-        <div class="swiper-slide">
-            <form name="quickInvestForm3" novalidate>
-                <div class="swiper-content retirement-content">
-                      <h1 class="topHeader">I would like to save the following amount per month for my retirement</h1>
-                      <p class="question width-60"><span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" ng-model="modelVal.A3" type="text" ame="year" required></span><span class="or">OR</span><button class="fin-app-btn fin-btn-white">PLEASE HELP ME ESTIMATE</button></p>
-                      <p class="question">Estimated savings amount in<span class="nextline highlight"><span class="calculatedAge">2041</span>-<span class="amount"><span class="currency">&#8377</span>3.0 Cr</span></span></p>
-                </div>
-            </form>
-        </div>
-        <div class="swiper-slide">
-            <form name="quickInvestForm3" novalidate>
+        <div class="swiper-slide" ng-if="$root.selectedCriteria == 'op2'">
+            <form name="retirementForm5" novalidate>
                 <div class="swiper-content">
                       <info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="48px" class-name="marginNegative60"></info-tip>
-                      <p class="question multiple"><span class="content">What is your pre-tax annual income?</span> <span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <p class="question multiple"><span class="content">How much do you currently spend monthly?</span> <span class="swiper-input normal"><input format="number" ng-model="modelVal.A4" type="text" name="year" required></span></p>
-                      <p class="question multiple"><span class="content">How much have you saved for rest of the retirement?</span> <span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" ng-model="modelVal.A4" type="text" name="year" required></span></p>
+                      <p class="question multiple"><span class="content">What is your pre-tax annual income?</span> <span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" ng-model="modelVal.A6" type="text" required></span></p>
+                      <p class="question multiple"><span class="content">How much do you currently spend monthly?</span> <span class="swiper-input normal"><input format="number" ng-model="modelVal.A7" type="text" required></span></p>
+                      <p class="question multiple"><span class="content">How much have you saved for rest of the retirement?</span> <span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" ng-model="modelVal.A8" type="text" required></span></p>
                       <span class="placeholder">Add total of your PPF,EPF,NPS, and other retirement savings</span>
                 </div>
             </form>
         </div>
-        <div class="swiper-slide">
-            <form name="quickInvestForm3" novalidate>
+        <div class="swiper-slide" ng-if="$root.selectedCriteria == 'op2'">
+            <form name="retirementForm6" novalidate>
                 <div class="swiper-content content-6 total-estimation">
                       <p class="question multiple"><span class="content">I love FinAskus estimate</span></p>
                       <p class="question multiple"><span class="content">I would like to save the following amount per month</span></p>
@@ -937,13 +929,12 @@
     </div> 
     <div class="fin-btn-group gotoPages" ng-show="$root.lastSlide">
         <button class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-        <button ng-show="(step == 1)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 2)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 3)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 4)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 5)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 6)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 7)" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 1) && ($root.selectedCriteria == 'op1' || $root.selectedCriteria == 'op2')" ng-disabled="retirementForm1.$invalid" ng-click="sendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 2) && ($root.selectedCriteria == 'op1' || $root.selectedCriteria == 'op2')" ng-click="sendValues(modelVal);(step = step + 1);calculateYear(modelVal.A2,modelVal.A3)" ng-disabled="(modelVal.A2 == 0)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 3) && ($root.selectedCriteria == 'op1')" ng-click="sendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next" ng-disabled="(modelVal.A4 == 0)||(modelVal.A4 == undefined)">CONTINUE</button>
+        <button ng-show="(step == 4) && ($root.selectedCriteria == 'op1')" ng-click="sendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next" ng-disabled="(modelVal.A5 == 0)||(modelVal.A5 == undefined)">CONTINUE</button>
+        <button ng-show="(step == 3) && ($root.selectedCriteria == 'op2')" ng-click="sendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next" ng-disabled="((modelVal.A6 == 0)||(modelVal.A6 == undefined))||((modelVal.A7 == 0)||(modelVal.A7 == undefined))||((modelVal.A8 == 0)||(modelVal.A8 == undefined))">CONTINUE</button>
+        <button ng-show="(step == 4) && ($root.selectedCriteria == 'op2')" ng-click="sendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
 </div>
 <div ng-if="swiperName == 'education'" class="fadeIn swiper-container customSwiper education type2Sliders" ng-init="step = 1">
