--- a/less/swiper.less
+++ b/less/swiper.less
@@ -189,6 +189,11 @@
           }
         }
       }
+      &.retirement{
+        .retirement-amount{
+          width:45%;
+        }
+      }
       .swiper-content{
         padding-bottom:12%;
         padding-top:6%;
