--- a/app/modules/planinvestment/modules/quickInvest/views/quickIvest.html
+++ b/app/modules/planinvestment/modules/quickInvest/views/quickIvest.html
@@ -9,11 +9,11 @@
 			<div class="col-xs-12">
 				<div class="col-xs-6">
 					<h2 ng-style="{'color':'#62bb46'}" class="text-center">Debt</h2>
-					<fin-calendar-form ng-model="equity" format="percent" type="#ddffd3" font-color="#62bb46" min="0" max="100"></fin-calendar-form>
+					<fin-calendar-form ng-model="equity" format-symbol="percent" type="#ddffd3" font-color="#62bb46" min="0" max="100"></fin-calendar-form>
 				</div>
 				<div class="col-xs-6">
 					<h2 ng-style="{'color':'#047bc1'}" class="text-center">Equity</h2>
-					<fin-calendar-form font-color="#047bc1" ng-model="equity2" format="percent" type="#e6f6ff" min="0" max="50"></fin-calendar-form>
+					<fin-calendar-form font-color="#047bc1" ng-model="equity2" format-symbol="percent" type="#e6f6ff" min="0" max="50"></fin-calendar-form>
 				</div>
 			</div>
 			<div class="col-xs-12 bottom-desc">
