--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -64,7 +64,7 @@
 					<div class="image-div">
 						<img src="assets/images/highInterest.png">
 					</div>
-					<button class="fin-app-btn fin-blue full-width">Earn Higher Interest</button>
+					<button class="fin-app-btn fin-blue full-width" click-redirect="/earnInterestStart">Earn Higher Interest</button>
 				</div>
 				<div class="col-xs-12 desc">
 					<p class="text-center">Conveniently park your money in<span class="nextline">smarter mutual fund alternatives than</span><span class="nextline">traditional bank accounts.</span></p>
