--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -243,7 +243,7 @@
 	<div class="fin-btn-group addMargin">
 	    <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
 	    <button click-redirect="/goals" class="fin-app-btn fin-blue">CONTINUE PLANING</button>
-	    <button click-redirect="/dashboard" class="fin-app-btn fin-orange">CONTINUE TO FUND SELECTION</button>
+	    <button click-redirect="" class="fin-app-btn fin-orange">CONTINUE TO FUND SELECTION</button>
 	</div>
 </section>
 
